fixed spacing index view and changed hover action to italic

--- a/app/assets/stylesheets/centers.scss
+++ b/app/assets/stylesheets/centers.scss
@@ -9,7 +9,7 @@ a {
 	text-decoration: none;
 }
 a:hover {
-	text-decoration: underline;
+	font-style: italic;
 }
 body {
 	height: 100vh;
